# productman

./: .env_example  Cargo.toml  README.md
frontend/: .env.example  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App_New.jsx
frontend/src/components/admin/: AdminCategoryForm.jsx  AdminProductForm.jsx
frontend/src/components/common/: AuthModal.jsx  CategoryCard.jsx  Navigation.jsx  Notification.jsx  ProductCard.jsx  SearchBar.jsx
frontend/src/config/: index.js
frontend/src/hooks/: useAdminData.js  useProductSearch.js
frontend/src/services/: api.js
migrations/: 001_initial.sql
src/: admin.rs  lib.rs  main.rs
src/db/: authq.rs  categoryq.rs  db_con.rs  mod.rs  productq.rs  searech.rs  userq.rs
src/middleware/: auth.rs
src/models/: auth.rs  category.rs  mod.rs  other.rs  product.rs  user.rs
src/services/: auth.rs  categories.rs  mod.rs  products.rs  profile.rs
src/utils/: auth.rs  error.rs  extractor.rs  jwt.rs  mod.rs
tests/: integration_test.rs
