[package]
name = "tests3"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "start"
path = "src/main.rs"

[[bin]]
name = "admin"
path = "src/admin.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace"] }
tokio = { version = "1.47.1", features = ["full"] }


tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

thiserror = "2.0.16"
anyhow = "1.0.99"
validator = { version = "0.20.0", features = ["derive"] }

jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
rand = "0.8"
regex = "1.11.2"

uuid = { version = "1.18.0", features = ["v4", "serde"] }
time = { version = "0.3.41", features = ["macros", "serde", "parsing"] }
chrono = { version = "0.4.41", features = ["serde"] }
rust_decimal = { version = "1.37.2", features = ["db-postgres"] }


sqlx = { version = "0.8.6", features = [
"runtime-tokio-rustls",
"macros",
"uuid",
"time",
"chrono",
"postgres",
"sqlite",
"rust_decimal"
] }



dotenvy = "0.15.7"
urlencoding = "2.1.3"


# file uploads
bytes = "1.10.1"
tokio-util = { version = "0.7.16", features = ["io"] }


[dev-dependencies]
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
# futures = "0.3"
# mockall = "0.12"
# tokio-test = "0.4"